<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.chernyshev.bankingapp.presentation.views.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_rounded_corners"
        app:backVisible="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balanceTitle"
        style="@style/Subtitle.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_12"
        android:text="@string/your_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        style="@style/Subtitle.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/unit_1"
        android:layout_marginBottom="2dp"
        android:text="@string/debit_balance"
        android:textColor="@color/banking_grey"
        app:layout_constraintBottom_toBottomOf="@id/debitBalance"
        app:layout_constraintEnd_toStartOf="@id/debitBalance" />

    <TextView
        android:id="@+id/debitBalance"
        style="@style/Title.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_1"
        android:textColor="@color/banking_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceTitle"
        tools:text="@string/amount_eur" />

    <TextView
        style="@style/Subtitle.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/unit_1"
        android:layout_marginBottom="2dp"
        android:text="@string/credit_balance"
        android:textColor="@color/banking_green"
        app:layout_constraintBottom_toBottomOf="@id/creditBalance"
        app:layout_constraintEnd_toStartOf="@id/creditBalance" />

    <TextView
        android:id="@+id/creditBalance"
        style="@style/Title.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_2"
        android:textColor="@color/banking_green"
        app:layout_constraintEnd_toEndOf="@id/debitBalance"
        app:layout_constraintStart_toStartOf="@id/debitBalance"
        app:layout_constraintTop_toBottomOf="@id/debitBalance"
        tools:text="@string/amount_eur" />

    <include
        android:id="@+id/balanceLoading"
        layout="@layout/view_circle_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/unit_4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/creditBalance"
        app:layout_constraintStart_toStartOf="@id/debitBalance"
        app:layout_constraintTop_toTopOf="@id/debitBalance" />

    <TextView
        android:id="@+id/transactions"
        style="@style/CommonButtonBig"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_12"
        android:text="@string/transactions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creditBalance"
        app:layout_constraintWidth_percent="@dimen/default_button_width_percent" />

</androidx.constraintlayout.widget.ConstraintLayout>